@@ -1,3 +1,7 @@
+2001-05-06  Martin Baulig  <baulig@suse.de>
+
+	* gnome-preferences.c: Use the new bonobo-property-bag-client API.
+
 2001-05-03  Martin Baulig  <baulig@suse.de>
 
 	* gnome-file-selector.[ch]: Moved here from libgnomeui.
